styled the vertical scrollbar and fixed navbar width

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   height: 55px;
-  width: 100vw;
+  width: 100%;
   padding: 0.5rem 2.5rem;
   position: sticky;
   top: 0;
